--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Camera Button Hookbox</string>
-    <string name="supports">Supported:\nWeChat\nGoogle Pthotos Scaner</string>
+    <string name="supports">Supported:\nWeChat\nGoogle Pthotos Scaner\nTIM</string>
     <string name="tips">Please turn on accessibility!\n(Click here go to)</string>
     <string name="txt">This app allows devices with physical camera keys\n(such as the Sony Xperia series) to work on apps that don\'t have an adaptation.</string>
 </resources>
